// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should return viewing 1 expense 1`] = `
<div>
  <h2>
     Viewing 
    1
     
    expense
     totalling 
    $19.22
  </h2>
</div>
`;

exports[`Should return viewing all expenses 1`] = `
<div>
  <h2>
     Viewing 
    3
     
    expenses
     totalling 
    $39.35
  </h2>
</div>
`;
